# MrWebDefence-LogServer

./: .cursorrules  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.cursor/: config.yaml
.cursor/rules/: .managed.yaml
.cursor/rules/00-workflow-checklist.d/: 00-WORKFLOW-CHECKLIST_variant2.md  04-push-check_variant1.md  04-push-check_variant3.md  05-pr-review_variant1.md
.cursor/rules/02-code-standards.d/: 01-02-test-requirements_variant2.md  02-task-start.md  02-task-start_variant3.md  03-05-script-tools.md  03-06-shell-scripts_variant1.md  04-01-gemini-learnings.md  04-01-gemini-learnings_variant1.md  04-01-gemini-learnings_variant3.md  07-design-review-checklist.md
.cursor/rules/03-git-workflow.d/: 02-commit-rules_variant2.md  03-push-check.md  03-push-check_variant2.md
.cursor/rules/04-github-integration.d/: 02-status-management.md  04-start-task_variant1.md  05-jira-integration_variant3.md
.cursor/rules/05-ci-cd.d/: 05-jira-integration.md
.cursor/rules/templates/: pr-description_variant2.md
.github/workflows/: ci.yml  lint.yml  test.yml
config/: fluent-bit.conf  parsers.conf  server.local.yaml.example  server.yaml
config/cron/: log-cleanup.cron
config/fluentd/: fluent.conf
config/fluentd/conf.d/: 01-source.conf  02-filter.conf  03-output.conf  04-output-s3.conf.example
docs/design/: MWD-53-log-collection.md  MWD-53-test-design.md
docs/operations/: operations-manual.md
docs/setup/: ssl-setup.md
scripts/: archive-logs.sh  generate-certs.sh  healthcheck.sh  run-tests.sh
scripts/github/: config.sh
scripts/jira/: common.sh  config.local.sh.example
src/: __init__.py  auth.py  config.py  main.py  models.py
src/buffer/: __init__.py  log_buffer.py
src/corrector/: __init__.py  time_corrector.py
src/parser/: __init__.py  log_parser.py  normalizer.py
src/server/: __init__.py  api.py
src/storage/: __init__.py  file_storage.py
tests/: conftest.py
tests/fixtures/: sample_logs.py
tests/integration/: test_e2e.py
tests/scripts/: test-config.sh  test-e2e.sh  test-http-input.sh  test-security.sh
tests/unit/: test_auth.py  test_buffer.py  test_normalizer.py  test_parser.py  test_storage.py
(+1 files in other folders)
